# agent-workspace

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.yaml  justfile
.github/scripts/: sync-rust-version.sh
.github/workflows/: ci.yml  daily-release.yml  release.yml
docs/: agent-workspace-tool-plan.md
docs/superpowers/plans/: 2026-06-13-mysql-backend.md
docs/superpowers/specs/: 2026-06-13-mysql-backend-design.md
hooks/: decode.py  encode.py  passthrough.py
openspec/changes/archive/2026-06-15-add-config-hooks/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-15-add-config-hooks/specs/config-hooks/: spec.md
openspec/changes/archive/2026-06-15-refactor-domain-modules/: design.md  tasks.md
openspec/changes/refactor-domain-modules/: proposal.md
openspec/changes/refactor-domain-modules/specs/module-structure/: spec.md
openspec/specs/config-hooks/: spec.md
openspec/specs/module-structure/: spec.md
python/: .gitignore  pyproject.toml
python/agent_workspace/: __init__.py  _agent_workspace.pyi
rust/: Cargo.toml
rust/data/docs/: a.txt.meta.yaml  demo.txt.meta.yaml
rust/data/other/: b.txt.meta.yaml
rust/data/tmp/: config.yaml
rust/data/tmp/data/api/: xxx.md.meta.yaml  yyy.md.meta.yaml
rust/src/: cli.rs  lib.rs  python.rs  scoping.rs
rust/src/commands/: init.rs  list.rs  read.rs  write.rs
rust/src/config/: load.rs  mod.rs  raw.rs  templates.rs
rust/src/hooks/: mod.rs
rust/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
rust/src/paths/: scope_prefix.rs
rust/src/storage/: file.rs  handle.rs  hooked.rs  mod.rs  scoped.rs
rust/src/storage/mysql/: connection.rs  mod.rs
rust/tests/: hooks_integration.rs  integration.rs  mysql_integration.rs
src/: cli.rs  config.rs  error.rs  lib.rs  lock.rs  main.rs  meta.rs  metadata.rs  ranges.rs  workspace.rs
src/backend/: content.rs  file.rs  mod.rs  mysql.rs  path.rs  scoped.rs
src/commands/: init.rs  list.rs  mod.rs  ranges.rs  read.rs  remove.rs  write.rs
src/config/: load.rs  mod.rs
src/mcp/: server.rs  tools.rs
src/paths/: metadata_name.rs  mod.rs  normalize.rs  resolve.rs
src/storage/: file.rs  handle.rs  mod.rs
tests/: integration.rs  mysql_integration.rs
