[package]
name = "agent-workspace"
version = "0.1.0"
edition = "2021"
description = "Restricted file-operation CLI for AI agents within a configured workspace"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dropxhq/agent-workspace"
keywords = ["agent", "workspace", "cli", "mcp"]
categories = ["command-line-utilities"]
exclude = [
    ".agents/",
    ".github/",
    "config.yaml",
    "data/",
    "docs/",
    "openspec/",
]

[lib]
name = "agent_workspace"
path = "src/lib.rs"

[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs4 = { version = "0.8", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
